src/test/deca/context/invalid/class/instanceof-int.deca
// Programme testant instanceof sur autre chose qu'une classe

class A {}

{
    A a = new A();
    if (a instanceof int) {}
}